--- a/PhotoFilter/Info.plist
+++ b/PhotoFilter/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>PhotoFilter allows you to save edited photos</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>PhotoFilter allows you to edit your photos</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
